--- a/misc/mke2fs.8.in
+++ b/misc/mke2fs.8.in
@@ -18,6 +18,10 @@ mke2fs \- create an ext2/ext3/ext4 filesystem
 .I block-size
 ]
 [
+.B \-d
+.I root-directory
+]
+[
 .B \-D
 ]
 [
@@ -50,10 +54,6 @@ mke2fs \- create an ext2/ext3/ext4 filesystem
 [
 .B \-N
 .I number-of-inodes
-]
-[
-.B \-d
-.I root-directory
 ]
 [
 .B \-n
@@ -236,6 +236,10 @@ enabled.  (See the
 .B ext4 (5)
 man page for more details about bigalloc.)   The default cluster size if
 bigalloc is enabled is 16 times the block size.
+.TP
+.BI \-d " root-directory"
+Copy the contents of the given directory into the root directory of the
+filesystem.
 .TP
 .B \-D
 Use direct I/O when writing to the disk.  This avoids mke2fs dirtying a
@@ -588,9 +592,6 @@ the
 .I bytes-per-inode
 ratio).  This allows the user to specify the number
 of desired inodes directly.
-.TP
-.BI \-d " root-directory"
-Add the files from the root-directory to the filesystem.
 .TP
 .BI \-o " creator-os"
 Overrides the default value of the "creator operating system" field of the
